<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvvm.comunidad.views.activities.UpdateSubscriptionActivity">

    <data>

        <variable
            name="updateViewModel"
            type="com.epm.app.mvvm.comunidad.viewModel.UpdateSubscriptionViewModel" />

    </data>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/menuDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background_update_subscription">


            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="@dimen/marginarrowStart"
                android:layout_marginTop="@dimen/marginarrowTop"
                android:onClick="close"
                android:src="@mipmap/right_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <app.epm.com.utilities.controls.CustomTextViewNormal
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/text_title_update_subscription"
                android:text="@string/title_update_subscription"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arrowBack" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_card_view"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_card_view"
                android:layout_marginBottom="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow_cardview_button_rigth"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">


                    <app.epm.com.utilities.controls.CustomEditTextNormal
                        android:id="@+id/textName"
                        style="@style/input_edittext_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:drawableEnd="@mipmap/icon_pencil"
                        android:hint="@string/hint_name"
                        android:text="@={updateViewModel.nameRecivied}"
                        android:maxLength="64"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:mutableEditText="@{updateViewModel.name}"/>

                    <app.epm.com.utilities.controls.CustomEditTextNormal
                        android:id="@+id/textLastName"
                        style="@style/input_edittext_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:drawableEnd="@mipmap/icon_pencil"
                        android:hint="@string/hint_last_name"
                        android:text="@={updateViewModel.lastNameRecivied}"
                        android:maxLength="64"
                        android:inputType="textEmailAddress"
                        app:mutableEditText="@{updateViewModel.lastName}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textName" />

                    <app.epm.com.utilities.controls.CustomEditTextNormal
                        android:id="@+id/textPhone"
                        style="@style/input_edittext_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:drawableEnd="@mipmap/icon_pencil"
                        android:hint="@string/hint_phone_number"
                        android:maxLength="10"
                        android:text="@={updateViewModel.telephoneRecivied}"
                        android:inputType="number"
                        app:mutableEditText="@{updateViewModel.telephone}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textLastName" />

                    <app.epm.com.utilities.controls.CustomEditTextNormal
                        android:id="@+id/textEmail"
                        style="@style/input_edittext_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:drawableEnd="@mipmap/icon_pencil"
                        android:inputType="textEmailAddress"
                        android:text="@={updateViewModel.emailRecivied}"
                        android:maxLength="100"
                        android:hint="@string/hint_email"
                        app:mutableEditText="@{updateViewModel.email}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textPhone" />


                    <app.epm.com.utilities.controls.CustomTextViewNormal
                        android:id="@+id/textNameMunicipio"
                        style="@style/input_textview_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:drawableEnd="@drawable/ic_arrow"
                        android:onClick="@{() -> updateViewModel.onClickMunicipio()}"
                        android:hint="@string/hint_municipio"
                        android:inputType="textEmailAddress"
                        android:text="@={updateViewModel.receivedMunicipality}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textEmail"
                        app:mutableText="@{updateViewModel.municipality}"
                        app:mutableTextViewEnable="@{updateViewModel.enableMunicipio}"
                        />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginEnd="19dp"
                        android:background="@color/editText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textNameMunicipio" />


                    <app.epm.com.utilities.controls.CustomTextViewNormal
                        android:id="@+id/textSector"
                        style="@style/input_textview_update_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="17dp"
                        android:layout_marginBottom="32dp"
                        android:backgroundTint="@color/color_background_tint_update_subscription"
                        android:onClick="@{() -> updateViewModel.onClickSectores()}"
                        android:drawableEnd="@drawable/ic_arrow"
                        android:hint="@string/hint_sector"
                        android:inputType="textEmailAddress"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line1"
                        app:mutableText="@{updateViewModel.sector}"
                        app:mutableTextViewEnable="@{updateViewModel.enableSector}"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginEnd="19dp"
                        android:layout_marginBottom="32dp"
                        android:background="@color/editText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSector" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView12">


                <app.epm.com.utilities.controls.CustomButtonBold
                    android:id="@+id/buttonUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_suscription_alertas"
                    android:text="@string/text_button_update"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/white"
                    android:onClick="@{() -> updateViewModel.updateSubscription()}"
                    android:textSize="@dimen/text_button_cancel"
                    />

                <app.epm.com.utilities.controls.CustomButtonBold
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_red_rounded"
                    android:paddingLeft="@dimen/padding_left_button_cancel"
                    android:paddingRight="@dimen/padding_right_button_cancel"
                    android:text="@string/text_button_cancel_subscription"
                    android:textAllCaps="false"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="@{() -> updateViewModel.cancelSubscription()}"
                    android:textColor="@color/button_cancel_subscription"
                    android:textSize="@dimen/text_button_cancel"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.drawerlayout.widget.DrawerLayout>



</layout>